# optimal_control_problem

./: CMakeLists.txt  cpu_install.sh  cuda_install.sh  package.xml  readme.md
code_gen/: .gitignore  QuadraticProblem.casadi  SQP_nlp_code.c
combat_files/: logging_is_not_google_glog.h
config/: OCP_config.yaml
cusadi/: .gitignore  CMakeLists.txt  run_codegen.py
cusadi/src/: __init__.py  generateCUDACode.py
include/optimal_control_problem/: OptimalControlProblem.h
include/optimal_control_problem/OCP_config/: OCPConfig.h
include/optimal_control_problem/cusadi_function/: CusadiFunction.h
include/optimal_control_problem/sqp_solver/: AutoDifferentiator.h  CasadiGpuEvaluator.h  CuCaQP.h  CuCaQP_readme.md  SQPOptimizationSolver.h  SQP_readme.md
include/sqp_solver/: CuCaQP.h  SQPOptimizationSolver.h
installation/: .gitignore  install.sh  logging_is_not_google_glog.h  readme.md  test_docker.sh
log/: .gitignore
src/: OptimalControlProblem.cpp
src/OCP_config/: OCPConfig.cpp
src/cusadi_function/: CasadiGpuEvaluator.cpp  CusadiFunction.cpp
src/pybind/: python_bindings.cpp
src/sqp_solver/: AutoDifferentiator.cpp  CasadiGpuEvaluator.cpp  CuCaQP.cpp  SQPOptimizationSolver.cpp
src/test_cusadi_function/: main.cpp
test/: test.cpp
