<?xml version="1.0"?>
<package format="2">
    <name>optimal_control_problem</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="867884187@qq.com">lock</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>ament_index_cpp</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
